--- a/Pre-Processing.ipynb
+++ b/Pre-Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "0b09a67e",
    "metadata": {},
    "outputs": [],
@@ -17,49 +17,25 @@
    "execution_count": null,
    "id": "6ba031d4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\chris\\AppData\\Local\\Temp\\ipykernel_25452\\3453890033.py:9: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
-      "  df = df.applymap(fix_single_quotes)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Funzione per raddoppiare le virgolette singole all'interno dei dati\n",
     "def fix_single_quotes(text):\n",
     "    if isinstance(text, str):\n",
-    "        # Raddoppia le virgolette singole\n",
     "        return text.replace(\"'\", \"''\")\n",
     "    return text\n",
     "\n",
-    "# Applica la funzione a tutte le colonne del DataFrame\n",
-    "df = df.applymap(fix_single_quotes)\n",
-    "\n",
-    "# Converte le date\n",
     "df[\"Order Date\"] = pd.to_datetime(df[\"Order Date\"], format=\"%m/%d/%Y\")\n",
     "df[\"Ship Date\"] = pd.to_datetime(df[\"Ship Date\"], format=\"%m/%d/%Y\")\n",
     "\n",
-    "# Esporta il CSV con le virgolette singole corrette\n",
     "df.to_csv(\n",
     "    \"Dataset/Store_clean.csv\",\n",
     "    index=False,\n",
-    "    quoting=csv.QUOTE_ALL,  # Racchiudi tutto tra virgolette doppie\n",
-    "    quotechar='\"',          # Usa virgolette doppie per delimitare i campi\n",
-    "    doublequote=True,       # Gestisci correttamente le virgolette interne\n",
+    "    quoting=csv.QUOTE_ALL,  \n",
+    "    quotechar='\"',          \n",
+    "    doublequote=True,       \n",
     "    encoding=\"utf-8\"\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "27745d39",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
